# caut-c11-ref

./: .gitignore  caut-c11-ref.cabal  run_crucible.sh  stack.yaml
lib/Cauterize/: C11Ref.hs
lib/Cauterize/C11Ref/: Ctx.hs  FileSystem.hs  Generate.hs  LibCFile.hs  LibCMessageFile.hs  LibHFile.hs  LibHMessageFile.hs  Makefile.hs  Static.hs  TestClient.hs  Util.hs
lib/Cauterize/C11Ref/LibCFile/: Comparators.hs  Decoders.hs  Encoders.hs  Initializers.hs  MessageInterface.hs
static/: run_tests.sh  test_iterators.c  test_serializers.c
static/lib/: cauterize.c  cauterize.h
